Avoid sections overlapping

--- a/main.css
+++ b/main.css
@@ -18,7 +18,8 @@ html {
 .section {
     display: flex;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
+    min-height: 100vh;
     width: 50vw;
     position: relative;
     font-family: 'Cabin', sans-serif;
@@ -29,7 +30,7 @@ html {
 
 .section .description-box {
     width: 50%;
-    min-height: 70%;
+    min-height: 90vh;
     background-color: #ffeded33;
     padding: 5%;
     margin-top: 5%;
